--- a/GuoKuApp/ios/GuoKuApp/Base.lproj/LaunchScreen.xib
+++ b/GuoKuApp/ios/GuoKuApp/Base.lproj/LaunchScreen.xib
@@ -8,17 +8,21 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+            <rect key="frame" x="0.0" y="0.0" width="365" height="583"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="welcome.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Q7W-g5-udE">
-                    <rect key="frame" x="10" y="100" width="460" height="279"/>
+                <imageView multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" image="welcome.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Q7W-g5-udE">
+                    <rect key="frame" x="106" y="248" width="153" height="96"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="Q7W-g5-udE" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Wcp-Ek-zKP"/>
+                <constraint firstItem="Q7W-g5-udE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="fns-95-hb8"/>
+            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="548" y="455"/>
+            <point key="canvasLocation" x="490.5" y="403.5"/>
         </view>
     </objects>
     <resources>
